tests/snapshots/rules__tmpl_nested_comment.snap
---
source: tests/rules.rs
description: "{#-   Some    {# Nested {#~   Comments #}   +#}    ~#}\n"
---
{#- Some {# Nested {#~ Comments #} +#} ~#}
