tests/snapshots/rules__tmpl_trailing_space.snap
---
source: tests/rules.rs
description: "{%     if foo  ~%}   {{-    bar  -}}   {%   else if     another   -%}         nothing       {%-   endif   %}\n"
---
{% if foo ~%}
    {{- bar -}}
{% else if another -%}
    nothing
{%- endif %}
